# miden

./: .env  .gitignore  Cargo.toml
.venv-filter-repo/: pyvenv.cfg
Admin Project Portal (1)/: README.md  index.html  package.json
Admin Project Portal (1)/src/: App.tsx
Admin Project Portal (1)/src/components/: AdminPortal.tsx  GovernanceSettings.tsx  PlatformAdminPortal.tsx  ProjectManagement.tsx  ProposalDetail.tsx  ProposalForm.tsx  ProposalManagement.tsx  UserManagement.tsx  VoteExplorer.tsx  WalletConnection.tsx
Admin Project Portal (1)/src/styles/: globals.css
frontend/: cypress.config.ts  jest.config.js  package-lock.json  package.json  vite.config.ts
frontend/cypress/e2e/: integration.cy.ts
frontend/cypress/support/: e2e.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/__tests__/: Badge.test.tsx  Button.test.tsx  Card.test.tsx  ProposalForm.test.tsx  VoteExplorer.test.tsx  WalletConnection.test.tsx
frontend/src/components/: AdminPortal.test.tsx  AdminPortal.tsx  GovernanceSettings.tsx  PlatformAdminPortal.test.tsx  PlatformAdminPortal.tsx  ProjectManagement.tsx  ProposalDetail.tsx  ProposalForm.test.tsx  ProposalForm.tsx  ProposalManagement.tsx  UserManagement.tsx  (+3 more)
migrations/: 20251004233810_create_users_table.sql
src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs  verifier.rs
src/handlers/: auth_handlers.rs  mod.rs  project_handlers.rs  proposal_handlers.rs  submission_handlers.rs  tally_handlers.rs  user_handlers.rs
src/routes/: auth_routes.rs  mod.rs  project_routes.rs  proposal_routes.rs  user_routes.rs
(+3 files in other folders)
