[package]
name = "miden_voting_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "0.12"
actix-web = "4"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "uuid", "chrono", "json" ] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
env_logger = "0.10"
serde_json = "1.0"

futures-util = "0.3"
